[lworld] C2 compilation fails with "bad dominance"

XMLWordPrintable

      # Internal Error (/oracle/valhalla1/open/src/hotspot/share/opto/loopnode.cpp:3950), pid=19028, tid=19039
      # assert(!had_error) failed: bad dominance

      Current CompileTask:
      C2: 12396 956 b compiler.valhalla.valuetypes.TestNullableArrays::test81_verifier (173 bytes)

      Stack: [0x00007f3e5831e000,0x00007f3e5841f000], sp=0x00007f3e584192e0, free space=1004k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x12520dd] PhaseIdealLoop::compute_lca_of_uses(Node*, Node*, bool)+0x24d
      V [libjvm.so+0x1252a10] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x250
      V [libjvm.so+0x12530f0] PhaseIdealLoop::build_loop_late(VectorSet&, Node_List&, Node_Stack&)+0xf0
      V [libjvm.so+0x1256e11] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x761
      V [libjvm.so+0x9fa1a8] PhaseIdealLoop::verify(PhaseIterGVN&)+0x2e8
      V [libjvm.so+0x9f6da7] Compile::Optimize()+0x4c7
      V [libjvm.so+0x9f8a09] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x10b9
      V [libjvm.so+0x81bafd] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
      V [libjvm.so+0xa050c4] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x334
      V [libjvm.so+0xa06118] CompileBroker::compiler_thread_loop()+0x4f8
      V [libjvm.so+0x18b87a6] JavaThread::thread_main_inner()+0x1b6
      V [libjvm.so+0x18bde66] Thread::call_run()+0xf6
      V [libjvm.so+0x148ecee] thread_native_entry(Thread*)+0x10e

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: