8227436: [lworld] C2 compilation fails with "bad dominance"

Reviewed-by: roland